[package]
name = "timebank"
version = "1.0.0"
description = "Soulbound TimeTokens for mutual aid economy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "timebank"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }

[dev-dependencies]
anchor-client = "0.29.0"
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"

